zellij-integration-tests/tests/snapshots/stacked_pane_list__splitting_a_new_pane_reforms_the_list_around_it.snap
---
source: zellij-integration-tests/tests/stacked_pane_list.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                       │ Pane #1
                                                       │ Pane #2
                                                  <↓↑> │ Pane #3
$ third-member
$
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                         Pane #4
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
