zellij-integration-tests/tests/snapshots/stacked_pane_list__up_and_down_move_the_selection_through_the_list.snap
---
source: zellij-integration-tests/tests/stacked_pane_list.rs
expression: normalized(&middle_member_selected)
---
 Zellij (test)  Tab #1  + 
                                                       │ Pane #1
                                                  <↓↑> │ Pane #2
                                                       │ Pane #3
$ second-member
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
